[project]
name = "ryousyusyo-syori"
version = "0.1.0"
description = "領収から日付、店名、金額を抽出する CLI ツールと MCP サーバー"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.5.1",
    "ollama>=0.6.1",
    "pdfplumber>=0.11.0",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[project.scripts]
ryousyusyo = "ryousyusyo_syori.cli:run"
ryousyusyo-server = "ryousyusyo_syori.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
